--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'GN'
 - !lcsh 'Ethnology -- Europe'
+- GITenberg
 title: Geschiedenis der Europeesche Volken
 url: http://www.gutenberg.org/ebooks/19774
